# dns-xdp

./: README.md  go.mod  go.sum
bpf/: Makefile
config/: config.yaml
cpp/: CMakeLists.txt  xdp_dns.pc.in
cpp/include/xdp_dns/: cgo_bridge.h  common.hpp  dns_parser.hpp  domain_trie.hpp
cpp/src/: cgo_bridge.cpp  dns_parser.cpp  domain_trie.cpp  filter_engine.cpp
cpp/tests/: benchmark_test.cpp  dns_parser_test.cpp  domain_trie_test.cpp
internal/worker/: processor.go
pkg/config/: config.go
pkg/dns/: benchmark_test.go  parser.go  parser_test.go  response.go  types.go
pkg/dns/cppbridge/: bridge.go  bridge_ext.go
pkg/dns/hybrid/: benchmark_test.go  processor.go
pkg/filter/: benchmark_test.go  domain.go  engine.go  engine_test.go  types.go
pkg/metrics/: collector.go  exporter.go
script/: install_dependencies.sh
tests/: test_xdp_flow.sh  xdp_flow_test.go
xdp/: xdp.go
xdp/cmd/dns-filter/: main.go
